--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -10,11 +10,11 @@
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-scripts": "0.9.5",
     "react-slick": "^0.14.11",
     "slick-carousel": "^1.6.0"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
