--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "config": "^1.25.1",
     "express": "^4.14.1",
     "mongodb": "^2.2.26",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "redis": "^2.7.1"
   },
   "repository": {
     "type": "git",
